src/objects/Offer__c/fields/LoA_Customer_Net_Price_ION_Optics__c.field-meta.xml
<CustomField>
    <fullName>LoA_Customer_Net_Price_ION_Optics__c</fullName>
    <description>Req Num 3764 Offer fields for Multi BG Process Reporting</description>
    <label>OLD LoA Customer Net Price ION Optics</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>