src/objects/Offer__c/fields/LoA_Customer_Unit_Price_BU_NE_DAaaS__c.field-meta.xml
<CustomField>
    <fullName>LoA_Customer_Unit_Price_BU_NE_DAaaS__c</fullName>
    <description>Req #5585</description>
    <label>OLD LoA Customer Unit Price BU NE DAaaS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>