src/objects/Offer__c/fields/LoA_Level_Before_STA_G4__c.field-meta.xml
<CustomField>
    <fullName>LoA_Level_Before_STA_G4__c</fullName>
    <description>Req #2286 : Create new field for Excel Add-In</description>
    <label>Approval Level Before STA (G4)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>