src/objects/Offer__c/fields/LoA_Level_Original__c.field-meta.xml
<CustomField>
    <fullName>LoA_Level_Original__c</fullName>
    <description>Requirement 1115 : Automatically filled out of LoA file (concrete field already provided)</description>
    <label>LoA Level Original</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoA_G4_Approval_Levels</valueSetName>
    </valueSet>
</CustomField>