src/objects/Offer__c/fields/Net_Sales_LoA_Base_Case_BU_NE_IoT__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_LoA_Base_Case_BU_NE_IoT__c</fullName>
    <description>Req #5585</description>
    <inlineHelpText>The value is in LoA Currency.</inlineHelpText>
    <label>OLD Net Sales (LoA Base Case) BU NE IoT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>