src/objects/Offer__c/fields/Pre_approved_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Pre_approved_Decision_Maker__c</fullName>
    <description>Req 580</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-approved Decision Maker</label>
    <type>TextArea</type>
</CustomField>