src/objects/Offer__c/fields/Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Print_Date__c</fullName>
    <description>Requirement 580</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Print Date</label>
    <type>Date</type>
</CustomField>