src/objects/Offer__c/fields/Risk_Assessment_Position_Statement__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Position_Statement__c</fullName>
    <description>Req #2286 : Create new field for Excel Add-In</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Assessment Position Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>