src/objects/Offer__c/fields/Total_Customer_Net_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Net_Price_Currency__c</fullName>
    <description>Req Num 3764 Offer fields for Multi BG Process Reporting</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>AP (Annual Plan) Currency reflecting as Total G4/G5 Customer Net Price</inlineHelpText>
    <label>Total Customer Net Price Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>