src/objects/Offer__c/validationRules/Customer_Offer_Due_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Offer_Due_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; $Label.Data_Loader_Profile_Name,
OR(Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos; ,Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;,Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;) ,
TEXT(Opportunity__r.Business_Type__c )!=&apos;Fast Track Opportunity&apos;,
NOT(
OR(
ISPICKVAL( Opportunity__r.StageName, &apos;Identify Opportunity&apos;),
ISPICKVAL( Opportunity__r.StageName, &apos;Develop Opportunity&apos;),
ISPICKVAL( Opportunity__r.StageName, &apos;Create Offer (Bid)&apos;))),
ISCHANGED( Customer_Offer_Due_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Customer_Offer_Due_Date__c</errorDisplayField>
    <errorMessage>It will not be possible to update the field once opportunity is G4 approved</errorMessage>
</ValidationRule>