src/objects/Offer__c/validationRules/Freeze_Decision_Maker_and_Bypass_Offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_Decision_Maker_and_Bypass_Offer</fullName>
    <active>true</active>
    <description>SF ticket No.- 01925623</description>
    <errorConditionFormula>AND(
										$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name,
										G4_passed__c = true,
										TEXT(Opportunity__r.Business_Type__c )!=&apos;Fast Track Opportunity&apos;,
          OR(ISCHANGED(LOA_Bypass__c), ISCHANGED(Decision_Maker__c)   )
)</errorConditionFormula>
    <errorMessage>Offer has been already used for G4 or G4 bypass so it is not possible to edit these fields anymore.</errorMessage>
</ValidationRule>