src/objects/Offer__c/validationRules/Freeze_Offer_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_Offer_Fields</fullName>
    <active>true</active>
    <description>Req 4802: Merge offer validation rules.</description>
    <errorConditionFormula>AND ( 
OR(
	ISPICKVAL( Opportunity__r.StageName , &quot;Win the Case (Negotiate)&quot;), 
	ISPICKVAL( Opportunity__r.StageName , &quot;Handover (Prepare for Delivery)&quot;) 
), 
$Profile.Name&lt;&gt; $Label.Data_Loader_Profile_Name,
OR(
	ISCHANGED( Pre_C5_Flag_NPI__c ),
	ISCHANGED( Pre_approved_Decision_Maker__c ),
	ISCHANGED( Opportunity__c ),
	ISCHANGED( Offer_Number__c ),
	ISCHANGED( LoA_G4_Approval_Level__c ),
	ISCHANGED( LastModifiedById ),
	ISCHANGED( Customer_Account_Name__c ),
	ISCHANGED( Country_of_Delivery__c )
),
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos; 
) 
)</errorConditionFormula>
    <errorMessage>The Offer field you are trying to modify is fixed and cannot be changed.</errorMessage>
</ValidationRule>