src/objects/Offer__c/validationRules/NF_AvoidOfferSaveOnPendingOpps.validationRule-meta.xml
<ValidationRule>
    <fullName>NF_AvoidOfferSaveOnPendingOpps</fullName>
    <active>true</active>
    <description>Avoid saving Offers when Opportunity is on Pending Approvals</description>
    <errorConditionFormula>AND(ISPICKVAL(Opportunity__r.Apttus_Approval__Approval_Status__c , &apos;Pending Approval&apos;),
$Profile.Name&lt;&gt;&apos;System Administrator&apos;, 
$Profile.Name&lt;&gt;&apos;Global Process Admin Profile&apos;, 
$Profile.Name&lt;&gt;&apos;Integration API Only Profile&apos;, 
$Profile.Name&lt;&gt;&apos;Data Loader Profile&apos; 
)</errorConditionFormula>
    <errorMessage>You cannot update the offer, when the opportunity is pending for approval</errorMessage>
</ValidationRule>