src/objects/Offer__c/validationRules/Offer_Creation_Past_G3.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Creation_Past_G3</fullName>
    <active>true</active>
    <description>D-0743: Offer Creation when Sales Phase is &apos;Create Offer (Bid)&apos; or &apos;Win the Case&apos;.
Req 943: Allowing offer creation from intial Sales Phase.
: Req 888 - For New Sales Path (Updated on 30-05-2017).</description>
    <errorConditionFormula>AND(
ISNEW(), 
$Profile.Name != &apos;Data Loader Profile&apos;,
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos; 
), 
OR(
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G2 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G3 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G4 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G5 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Submitted for G6 Approval&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Closed&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Closed(not won)&apos;,
TEXT(Opportunity__r.Phase_Status__c) = &apos;Closed Handover&apos;,
TEXT(Opportunity__r.StageName) = &apos;Handover (Prepare for Delivery)&apos;,
TEXT( Opportunity__r.StageName) = &apos;Execute (Start Delivery)&apos;,
TEXT(Opportunity__r.StageName) = &apos;Closed&apos;
)
)</errorConditionFormula>
    <errorMessage>Offer cannot be created past G5 or when Opportunity is locked.</errorMessage>
</ValidationRule>