src/objects/Offer__c/validationRules/Restrict_Manual_change_SSO_To_Attached.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Manual_change_SSO_To_Attached</fullName>
    <active>true</active>
    <description>Req:5091 :Solution Sign-Off Validations</description>
    <errorConditionFormula>AND( 
 ISNEW() ,
$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name,
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;
),
  ISPICKVAL(Solution_Sign_Off_New__c,&apos;Required (Attached)&apos;)
)</errorConditionFormula>
    <errorMessage>Please attach a Solution Sign-Off document. &apos;Required (attached)&apos; will be updated automatically.</errorMessage>
</ValidationRule>