src/objects/Offer__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>Offer_Number__c</columns>
    <columns>NAME</columns>
    <columns>LoA_Approval_Level__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Customer_Account_Name__c</columns>
    <columns>Customer_Offer_Due_Date__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Offer_Number__c</field>
        <operation>equals</operation>
        <value>20.JP.920685.02</value>
    </filters>
    <label>All Offers</label>
</ListView>